--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><i class="fa fa-terminal"></i>首页</a>
+                <a class="navbar-brand page-scroll" href="#page-top">首页</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -96,7 +96,7 @@
             </div>
         </div>
     </header>
-<div class="copyrights">CoderGuhao简历 <a href="http://blog.csdn.net/gh2391292" >安卓开发</a></div>
+<div class="copyrights">CoderGuhao <a href="http://blog.csdn.net/gh2391292" >安卓开发</a></div>
 <!-- Services Section -->
 <div id="services" class="text-center">
   <div class="container">
@@ -131,7 +131,7 @@
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-bullseye"></i>
         <h4><strong>联系方式</strong></h4>
         <p>QQ：814659370</br>
-		  邮箱：guhao_814659370@qq.com</p>
+		  邮箱：guhao_814659370@qq.com</br>
 		  电话：18368493627</p>
       </div>
     </div>
@@ -265,7 +265,7 @@
 <div id="about">
   <div class="container">
     <div class="section-title text-center center">
-      <h2><strong>专业</strong> 技能</h2>
+      <h2><strong>专业 </strong>技能</h2>
       <hr>
     </div>
     <div class="row">
