--- a/index.html
+++ b/index.html
@@ -85,9 +85,10 @@
         <div class="intro-body">
             <div class="container">
                 <div class="row">
+				<div class="container"> <img src="img/ghhead.png" alt="head" class="img-circle team-img"></div>
                     <div class="col-md-8 col-md-offset-2">
-                        <h1>顾豪<span class="brand-heading">-个人简历</span></h1>
-                        <p class="intro-text">喜欢技术，热爱挑战</p>
+                        <h1>顾豪<span class="brand-heading"> 个人简历</span></h1>
+                        <p class="intro-text">喜欢技术，与时俱进</p>
                         <a href="#services" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -96,7 +97,7 @@
             </div>
         </div>
     </header>
-<div class="copyrights">CoderGuhao <a href="http://blog.csdn.net/gh2391292" >安卓开发</a></div>
+<div class="copyrights">CoderGuhao <a href="https://github.com/CoderGuHao" >GitHub</a></div>
 <!-- Services Section -->
 <div id="services" class="text-center">
   <div class="container">
@@ -109,30 +110,33 @@
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-laptop"></i>
         <h4><strong>个人信息</strong></h4>
         <p>
-		英文名: Gu Hao &nbsp;性别：男</br>
-		年龄: 22岁 籍贯：浙江湖州
+		姓名：顾豪</br>
+		性别：男</br>
+		年龄：22岁</br>
+		籍贯：浙江湖州
 		</p>
       </div>
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-code"></i>
         <h4><strong>专业学历</strong></h4>
         <p>
 		专业：计算机科学与技术</br>
-		学历：大学本科</br>
-		
+		学历：大学本科
 		</p>
       </div>
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-rocket"></i>
         <h4><strong>毕业学校</strong></h4>
         <p>
-		  毕业学校：浙江大学宁波理工学院</br>
-		  学习技能：C/C++、JAVA、数据库、计算机网络原理、数据结构等
+		毕业学校：浙江大学宁波理工学院</br>
+		学习技能：C/C++、JAVA、数据库、计算机网络原理、数据结构等
 		</p>
       </div>
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-bullseye"></i>
         <h4><strong>联系方式</strong></h4>
-        <p>QQ：814659370</br>
-		  邮箱：guhao_814659370@qq.com</br>
-		  电话：18368493627</p>
+        <p>
+		QQ: 814659370</br>
+		邮箱: guhao_814659370@qq.com</br>
+		电话: 18368493627
+		</p>
       </div>
     </div>
   </div>
@@ -144,16 +148,16 @@
       <h2>项目 <strong>经验</strong></h2>
       <hr>
       <div class="clearfix"></div>
-      <p>主要涉及巴拉巴拉</p>
+      <p>主要涉及Web、Android</p>
     </div>
     <div class="categories">
       <ul class="cat">
         <li>
           <ol class="type">
             <li><a href="#" data-filter="*" class="active">所有</a></li>
-            <li><a href="#" data-filter=".web">Client端</a></li>
+            <li><a href="#" data-filter=".client">Client端</a></li>
             <li><a href="#" data-filter=".app">移动端</a></li>
-            <li><a href="#" data-filter=".branding">Web端</a></li>
+            <li><a href="#" data-filter=".web">Web端</a></li>
           </ol>
         </li>
       </ul>
@@ -162,85 +166,85 @@
     <div class="row">
       <div class="portfolio-items">
 	  
-        <div class="col-sm-6 col-md-3 col-lg-3 web">
+        <div class="col-sm-6 col-md-3 col-lg-3 web app">
           <div class="portfolio-item">
             <div class="hover-bg">
               <div class="hover-text">
-                <h4><a href='http://www.ymjihe.com' target='_blank' title="巴拉巴拉">巴拉巴拉</a></h4>
-                <small>技术：巴拉巴拉</small>
+                <h4><a href='http://weibo.com/' target='_blank' title="新浪微博">新浪微博</a></h4>
+                <small>技术：Web + App</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
-              <img src="img/portfolio/01.jpg" class="img-responsive" alt="巴拉巴拉"></div>
+              <img src="img/portfolio/01.jpg" class="img-responsive" alt="新浪微博"></div>
           </div>
         </div>
 		
-        <div class="col-sm-6 col-md-3 col-lg-3 web">
+        <div class="col-sm-6 col-md-3 col-lg-3 app client">
           <div class="portfolio-item">
             <div class="hover-bg">
               <div class="hover-text">
-                <h4><a href="http://www.ymjihe.com" target='_blank' title="巴拉巴拉">巴拉巴拉</a></h4>
-                <small>技术：巴拉巴拉</small>
+                <h4><a href="http://im.qq.com/" target='_blank' title="QQ">腾讯QQ</a></h4>
+                <small>技术：Client + App</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
-              <img src="img/portfolio/02.jpg" class="img-responsive" alt="巴拉巴拉"></div>
+              <img src="img/portfolio/02.jpg" class="img-responsive" alt="QQ"></div>
           </div>
         </div>
 		
-        <div class="col-sm-6 col-md-3 col-lg-3 web">
+        <div class="col-sm-6 col-md-3 col-lg-3 web app">
           <div class="portfolio-item">
             <div class="hover-bg">
               <div class="hover-text">
-                <h4><a href="http://www.ymjihe.com" target='_blank' title="巴拉巴拉">巴拉巴拉</a></h4>
-                <small>技术：巴拉巴拉</small>
+                <h4><a href="https://www.taobao.com/" target='_blank' title="淘宝">淘宝</a></h4>
+                <small>技术：Web + App</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
-              <img src="img/portfolio/03.jpg" class="img-responsive" alt="巴拉巴拉"></div>
+              <img src="img/portfolio/03.jpg" class="img-responsive" alt="淘宝"></div>
           </div>
         </div>
 		
-        <div class="col-sm-6 col-md-3 col-lg-3 web">
+        <div class="col-sm-6 col-md-3 col-lg-3 client">
           <div class="portfolio-item">
             <div class="hover-bg">
               <div class="hover-text">
-                <h4><a href='http://www.ymjihe.com' target='_blank' title="巴拉巴拉">巴拉巴拉</h4>
-                <small>技术：巴拉巴拉</small>
+                <h4><a href='http://www.dota2.com.cn/index.htm' target='_blank' title="Dota2">Dota2</h4>
+                <small>技术：游戏开发</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
-              <img src="img/portfolio/04.jpg" class="img-responsive" alt="巴拉巴拉"></div>
+              <img src="img/portfolio/04.png" class="img-responsive" alt="Dota2"></div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
             <div class="hover-bg">
               <div class="hover-text">
-                <h4><a href='http://www.ymjihe.com' target='_blank' title="巴拉巴拉">巴拉巴拉</a></h4>
-                <small>技术：巴拉巴拉</small>
+                <h4><a href='http://store.steampowered.com/' target='_blank' title="Stem">Steam</a></h4>
+                <small>技术：...</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
-              <img src="img/portfolio/05.jpg" class="img-responsive" alt="巴拉巴拉">
+              <img src="img/portfolio/05.png" class="img-responsive" alt="Steam">
 			  </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 branding">
+        <div class="col-sm-6 col-md-3 col-lg-3 client app">
           <div class="portfolio-item">
             <div class="hover-bg">
               <div class="hover-text">
-                <h4><a href="http://www.ymjihe.com" target='_blank' title="巴拉巴拉">巴拉巴拉</a></h4>
-                <small>技术：巴拉巴拉</small>
+                <h4><a href="http://im.qq.com/" target='_blank' title="QQ">腾讯QQ</a></h4>
+                <small>技术：Client + App</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
               <img src="img/portfolio/06.jpg" class="img-responsive" alt="巴拉巴拉"></div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 branding app web">
+        <div class="col-sm-6 col-md-3 col-lg-3 app">
           <div class="portfolio-item">
             <div class="hover-bg">
               <div class="hover-text">
-                <h4><a href="http://www.ymjihe.com" target='_blank' title="巴拉巴拉">巴拉巴拉</a></h4>
-                <small>技术：巴拉巴拉</small>
+                <h4><a href="https://github.com/CoderGuHao" target='_blank' title="智慧安防">智慧安防</a></h4>
+                <small>技术：Android</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
-              <img src="img/portfolio/07.jpg" class="img-responsive" alt="巴拉巴拉"></div>
+              <img src="img/portfolio/07.jpg" class="img-responsive" alt="智慧安防"></div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web app">
@@ -248,12 +252,12 @@
 		  
             <div class="hover-bg"> 
               <div class="hover-text">
-                <h4><a href='http://www.ymjihe.com' target='_blank' title="巴拉巴拉">巴拉巴拉 </a></h4>
-                <small>技术：巴拉巴拉</small>
+                <h4><a href='http://weibo.com/' target='_blank' title="新浪微博">新浪微博</a></h4>
+                <small>技术：Web + App</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> 
 				</div>
-              <img src="img/portfolio/08.jpg" class="img-responsive" alt="巴拉巴拉">
+              <img src="img/portfolio/08.jpg" class="img-responsive" alt="新浪微博">
 		    </div>
           </div>
         </div>
@@ -273,13 +277,13 @@
       <div class="col-md-6">
         <div class="about-text"> <i class="fa fa-users"></i>
           <div class="padding-left"><h4>PC端</h4>
-          <p>巴拉巴拉小魔仙.</p></div>
+          <p>MySql + Eclipse + JSP</p></div>
           <i class="fa fa-magic"></i>
           <div class="padding-left"><h4>移动端</h4>
-          <p>巴拉巴拉小魔仙.</p></div>
+          <p>Android Studio</p></div>
           <i class="fa fa-check-square-o"></i>
           <div class="padding-left"><h4>其它</h4>
-          <p>巴拉巴拉小魔仙.</p></div>
+          <p>CAD</p></div>
         </div>
       </div>
     </div>
@@ -298,7 +302,7 @@
 					<div class="col-md-3 col-sm-3">
 						<div class="achivement-box">
 							<i class="fa fa-code"></i>
-							<span class="count">100000</span>
+							<span class="count">50000</span>
 							<h4>Code Amount</h4>                            
 						</div>
 					</div> 
@@ -312,7 +316,7 @@
 					<div class="col-md-3 col-sm-3">
 						<div class="achivement-box">
 							<i class="fa fa-trophy"></i>
-							<span class="count">20</span>
+							<span class="count">4</span>
 							<h4>Projects Amount</h4>                            
 						</div>
 					</div> 
@@ -325,47 +329,36 @@
     <div class="section-title center">
       <h2>人生 <strong>经历</strong></h2>
       <hr>
-      <p>热爱互联网，热爱技术，专注于巴拉巴拉小魔仙</p>
+      <p>热爱互联网，热爱技术，专注于安卓开发</p>
     </div>
     <div id="row">
 	
-	<div class="col-md-3 col-sm-6">
+	<div class="col-md-4 col-sm-6">
         <div class="thumbnail"> <img src="img/team/02.jpg" alt="浙江大学宁波理工学院" class="img-circle team-img">
           <div class="caption">
             <h3>浙江大学宁波理工学院</h3>
             <p>计算机科学与技术</p>
-            <p>主要学习balabala，大学期间做过很多项目，很喜欢编程</p>
+            <p>主要学习JAVA，大学期间做过很多项目，很喜欢编程</p>
           </div>
         </div>
       </div>
 	
-      <div class="col-md-3 col-sm-6">
-        <div class="thumbnail"> <img src="img/team/01.jpg" alt="和丰" class="img-circle team-img">
+      <div class="col-md-4 col-sm-6">
+        <div class="thumbnail"> <img src="img/team/01.jpg" alt="和丰创意广场" class="img-circle team-img">
           <div class="caption">
             <h3>奥奈斯特（宁波）软件技术有限公司</h3>
             <p>测试+安卓开发</p>
-            <p>巴拉巴拉小魔仙</p>
+            <p>主要负责...</p>
           </div>
         </div>
       </div>
 	  
-      
-	  
-      <div class="col-md-3 col-sm-6">
-        <div class="thumbnail"> <img src="img/team/03.jpg" alt="浙大网新" class="img-circle team-img">
+      <div class="col-md-4 col-sm-6">
+        <div class="thumbnail"> <img src="img/team/03.jpg" alt="More" class="img-circle team-img">
           <div class="caption">
-            <h3>巴拉巴拉</h3>
-            <p>巴拉巴拉</p>
-            <p>巴拉巴拉</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6">
-        <div class="thumbnail"> <img src="img/team/04.jpg" alt="欧工国际" class="img-circle team-img">
-          <div class="caption">
-            <h3>巴拉巴拉</h3>
-            <p>巴拉巴拉</p>
-            <p>巴拉巴拉</p>
+            <h3>More...</h3>
+            <p>More...</p>
+            <p>More...</p>
           </div>
         </div>
       </div>
@@ -412,18 +405,18 @@
     </div>
     <div class="col-md-8 col-md-offset-2">
       <div class="col-md-4"> <i class="fa fa-map-marker fa-2x"></i>
-        <p>浙江省宁波市鄞州区福明街道海宁街东方一品17幢45单元1204</p>
+        <p>浙江省宁波市江东区和丰创意广场丰庭楼1701室</p>
       </div>
       <div class="col-md-4"> <i class="fa fa-envelope-o fa-2x"></i>
         <p>guhao_814659370@qq.com</p>
       </div>
       <div class="col-md-4"> <i class="fa fa-phone fa-2x"></i>
-        <p>Tel:18368493627</p>
+        <p>183-6849-3627</p>
       </div>
       <hr>
       <div class="clearfix"></div>
     </div>
-    <div class="col-md-8 col-md-offset-2">
+<!--     <div class="col-md-8 col-md-offset-2">
       <hr>
       <h3>给我发邮件</h3>
       <form name="sentMessage" id="contactForm" novalidate>
@@ -448,20 +441,21 @@
         <div id="success"></div>
         <button type="submit" class="btn btn-default">确认发送</button>
       </form>
-    </div>
+    </div> -->
   </div>
 </div>
 </div>
 <nav id="footer">
   <div class="container">
     <div class="pull-left fnav">
-      <p>Copyright &copy; 2017 作者：顾豪. 屌丝程序员 
+      <p>Copyright &copy; 2017 作者：顾豪
     </div>
     <div class="pull-right fnav">
       <ul class="footer-social">
-	    <li><a href="http://weibo.com/2284982722/profile?rightmod=1&wvr=6&mod=personinfo"><i class="icon iconfont">&#xe66e;</i></a></li>
-        <li><a href="https://github.com/CoderGuHao"> <i class="icon iconfont">&#xe629;</i></a></li>
-        <li><a href="https://user.qzone.qq.com/814659370/infocenter"> <i class="icon iconfont">&#xe616;</i></a></li>
+        <li><a href="https://github.com/CoderGuHao"> <i class="fa fa-github fa-2x"></i></a></li>
+		<li><a href="http://blog.csdn.net/gh2391292"><i class="fa fa-bold fa-2x"></i></a></li>
+        <li><a href="http://weibo.com/2284982722"> <i class="fa fa-weibo fa-2x"></i></a></li>
+		<li><a href="http://steamcommunity.com/id/NakayamaYuma/"><i class="fa fa-steam-square fa-2x"></i></a></li>
       </ul>
     </div>
   </div>
