--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
           <div class="portfolio-item">
             <div class="hover-bg">
               <div class="hover-text">
-                <h4><a href='http://www.dota2.com.cn/index.htm' target='_blank' title="Dota2">Dota2</h4>
+                <h4><a href='http://www.dota2.com.cn/index.htm' target='_blank' title="Dota2">Dota2</a></h4>
                 <small>技术：游戏开发</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
@@ -217,7 +217,7 @@
           <div class="portfolio-item">
             <div class="hover-bg">
               <div class="hover-text">
-                <h4><a href='http://store.steampowered.com/' target='_blank' title="Stem">Steam</a></h4>
+                <h4><a href='http://store.steampowered.com/' target='_blank' title="Steam">Steam</a></h4>
                 <small>技术：...</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
@@ -443,7 +443,6 @@
       </form>
     </div> -->
   </div>
-</div>
 </div>
 <nav id="footer">
   <div class="container">
